--- a/src/input.css
+++ b/src/input.css
@@ -12,3 +12,7 @@
     @apply prose m-1 inline-block rounded-2xl bg-base-200 p-2 shadow-md;
     width: 330px;
 }
+
+.sharing img {
+    @apply mt-0;
+}
