--- a/src/output.css
+++ b/src/output.css
@@ -3110,6 +3110,14 @@ details.collapse summary::-webkit-details-marker {
   padding: 1.25rem;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
+.p-4 {
+  padding: 1rem;
+}
+
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
